--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
-numpy>=1.24.0
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
+numpy<2.0
 psutil>=5.9.0
 GPUtil>=1.4.0
 aiohttp>=3.8.0
 asyncio>=3.4.3
 zeroconf>=0.39.0
+websockets>=11.0.3
+fastapi>=0.104.1
+uvicorn>=0.24.0
+networkx>=3.2.1
 rich>=10.0.0
-fastapi
-uvicorn
+aiofiles>=23.2.1
+jinja2>=3.1.2
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+docker>=6.1.0
+pydantic>=2.0.0
+transformers>=4.36.0
+accelerate>=0.26.0
+safetensors>=0.4.0
+sentencepiece>=0.1.99
+protobuf>=4.25.0
+huggingface_hub>=0.20.0
