--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,31 @@
 torch==2.2.2
 torchvision==0.17.2
 torchaudio==2.2.2
-numpy<2.0
-psutil>=5.9.0
-GPUtil>=1.4.0
-aiohttp>=3.8.0
-asyncio>=3.4.3
-zeroconf>=0.39.0
-websockets>=11.0.3
-fastapi>=0.104.1
-uvicorn>=0.24.0
-networkx>=3.2.1
-rich>=10.0.0
-aiofiles>=23.2.1
-jinja2>=3.1.2
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-docker>=6.1.0
-pydantic>=2.0.0
+numpy==1.24.3
+pandas>=2.0.0
+scipy>=1.10.0
 transformers>=4.36.0
 accelerate>=0.26.0
 safetensors>=0.4.0
 sentencepiece>=0.1.99
-protobuf>=4.25.0
 huggingface_hub>=0.20.0
+bitsandbytes>=0.41.0
+einops>=0.6.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+websockets>=12.0
+aiohttp>=3.8.0
+jinja2>=3.1.2
+python-multipart>=0.0.6
+pydantic>=2.4.2
+psutil>=5.9.0
+GPUtil>=1.4.0
+zeroconf>=0.39.0
+asyncio>=3.4.3
+protobuf>=4.25.0
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+docker>=6.1.0
+rich>=10.0.0
+aiofiles>=23.2.1
+networkx>=3.2.1
